# gemm_kernel_benchmark

./: CMakeLists.txt  README.md  direct_run_kernel_from_string.cpp  direct_run_kernel_from_string_W4A16.cpp  direct_run_kernel_from_string_W4A16_onlyGPU.cpp  direct_run_kernel_from_string_W4A16_onlyGPU_floatcompute.cpp  direct_run_kernel_from_string_W4A32.cpp  direct_run_kernel_from_string_W8A16_onlyGPU.cpp  direct_run_kernel_from_string_W8A16_onlyGPU_floatcompute.cpp  opencl_loader.cpp
